fix(home): optimized images sizes and added aria-label to links

--- a/components/plasmic/amap_website/PlasmicFooter.module.css
+++ b/components/plasmic/amap_website/PlasmicFooter.module.css
@@ -451,7 +451,7 @@
   }
 }
 .freeBoxminimal___7CGho8Pz46 {
-  background: url("/plasmic/amap_website/images/concreteTexture.png") top 50% left 50% / contain repeat;
+  background: url("/plasmic/amap_website/images/concreteTexture.jpeg") top 50% left 50% / contain repeat;
 }
 .homeLink {
   position: relative;
