--- a/components/plasmic/amap_website/PlasmicContract.module.css
+++ b/components/plasmic/amap_website/PlasmicContract.module.css
@@ -7,7 +7,7 @@
   overflow-x: hidden;
   justify-content: flex-start;
   align-items: center;
-  background: url("/plasmic/amap_website/images/concreteTexture.png") top 50% left 50% / contain repeat;
+  background: url("/plasmic/amap_website/images/concreteTexture.jpeg") top 50% left 50% / contain repeat;
   min-width: 0;
   min-height: 0;
 }
