--- a/components/plasmic/amap_website/PlasmicHomepage.module.css
+++ b/components/plasmic/amap_website/PlasmicHomepage.module.css
@@ -4,7 +4,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  background: url("/plasmic/amap_website/images/concreteTexture.png") top 50% left 50% / contain repeat-y;
+  background: url("/plasmic/amap_website/images/concreteTexture.jpeg") top 50% left 50% / contain repeat-y;
   min-width: 0;
   min-height: 0;
   padding: 0px;
@@ -50,10 +50,28 @@
   width: 100%;
   height: 100%;
   max-width: 100%;
-  background: url("/plasmic/amap_website/images/homeBg.png") top 50% left 50% / cover no-repeat;
+  background: none;
   margin-bottom: 0px;
+  align-self: auto;
   min-width: 0;
   padding: 0px;
+}
+.heroBackground {
+  position: absolute;
+  object-fit: cover;
+  left: 0;
+  top: 0;
+  width: auto;
+  z-index: 0;
+  right: 0;
+  height: 100%;
+  min-height: 0;
+}
+.heroBackground > picture > img {
+  object-fit: cover;
+}
+.heroBackground > .__wab_img-spacer > img {
+  object-fit: cover;
 }
 .h1 {
   color: var(--token-pf4RLfMl0);
